--- a/android_demo/res/layout/activity_main.xml
+++ b/android_demo/res/layout/activity_main.xml
@@ -40,8 +40,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="10" 
-                android:inputType="text">
+                android:ems="10"
+                android:inputType="textNoSuggestions" 
+                >
 
                 <requestFocus />
             </EditText>
@@ -68,7 +69,7 @@
 
                 <TextView
                     android:id="@+id/textView_response_text"
-                    android:layout_width="287dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textColor="@color/text"
