Added ACRA error reporting

--- a/android_demo/res/xml/preferences.xml
+++ b/android_demo/res/xml/preferences.xml
@@ -5,12 +5,12 @@
 	
      <EditTextPreference
          android:key="eva_key"
-         android:summary="Leave blank for default"
+         android:summary=""
          android:title="Eva API Key"
       	/>
      <EditTextPreference
          android:key="eva_site_code"
-         android:summary="Leave blank for default"
+         android:summary=""
          android:title="Site Code"
       	/>    
       	
