--- a/android_search/res/values/attrs.xml
+++ b/android_search/res/values/attrs.xml
@@ -1,9 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- Based on this blog post: http://blog.peterkuterna.net/2011/09/viewpager-meets-swipey-tabs.html -->
 
 <resources>
 
+    <!-- From StickyListHeaders -->
+    <declare-styleable name="StickyListHeadersListView">
+        <!-- View attributes -->
+        <attr name="android:clipToPadding" />
+        <attr name="android:scrollbars" />
+        <attr name="android:overScrollMode" />
+        <attr name="android:padding" />
+        <attr name="android:paddingLeft" />
+        <attr name="android:paddingTop" />
+        <attr name="android:paddingRight" />
+        <attr name="android:paddingBottom" />
+
+        <!-- ListView attributes -->
+        <attr name="android:fadingEdgeLength" />
+        <attr name="android:requiresFadingEdge" />
+        <attr name="android:cacheColorHint" />
+        <attr name="android:choiceMode" />
+        <attr name="android:drawSelectorOnTop" />
+        <attr name="android:fastScrollEnabled" />
+        <attr name="android:fastScrollAlwaysVisible" />
+        <attr name="android:listSelector" />
+        <attr name="android:scrollingCache" />
+        <attr name="android:scrollbarStyle" />
+        <attr name="android:divider" />
+        <attr name="android:dividerHeight" />
+        <attr name="android:transcriptMode" />
+
+        <!-- StickyListHeaders attributes -->
+        <attr name="hasStickyHeaders" format="boolean" />
+        <attr name="isDrawingListUnderStickyHeader" format="boolean" />
+    </declare-styleable>
+    
+    
+	<!-- Based on this blog post: http://blog.peterkuterna.net/2011/09/viewpager-meets-swipey-tabs.html -->
     <declare-styleable name="SwipeyTabs">
         <attr name="bottomBarColor" format="color" />
         <attr name="bottomBarHeight" format="dimension" />
