--- a/android_search/res/values-v11/styles.xml
+++ b/android_search/res/values-v11/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="FullscreenTheme" parent="android:Theme.Holo">
+    <style name="FullscreenTheme" parent="@style/Theme.AppCompat.Light">
         <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowBackground">@null</item>
@@ -8,7 +8,7 @@
 <!--         <item name="buttonBarButtonStyle">?android:attr/buttonBarButtonStyle</item> -->
     </style>
 
-    <style name="FullscreenActionBarStyle" parent="android:Widget.Holo.ActionBar">
+    <style name="FullscreenActionBarStyle" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="android:background">@color/black_overlay</item>
     </style>
 
