--- a/android_search/res/drawable/custom_button.xml
+++ b/android_search/res/drawable/custom_button.xml
@@ -1,29 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- <layer-list xmlns:android="http://schemas.android.com/apk/res/android"> -->
+
+<!--      Drop Shadow -->
+<!--      <item> -->
+<!--         <shape> -->
+<!--             <padding android:top="2dp" android:right="4dp" android:bottom="4dp" android:left="4dp" /> -->
+<!--             <corners android:radius="200dp" /> -->
+            
+<!-- 		    <gradient -->
+<!-- 		        android:centerColor="#ff515151" -->
+<!-- 		        android:endColor="#40000000" -->
+<!-- 		        android:gradientRadius="32" -->
+<!-- 		        android:startColor="#ff313131" -->
+<!-- 		        android:type="radial" > -->
+<!-- 		    </gradient> -->
+<!--         </shape> -->
+<!--     </item> -->
+     
+    <!-- Background -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" >
         <shape>
+            <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
             <solid
-                android:color="#646484" />
+                android:color="#947474" />
             <stroke
                 android:width="1dp"
-                android:color="#ff88aaff" />
-            <corners
-                android:radius="5dp" />
+                android:color="#ffaa88" />
+            <corners android:radius="200dp" />
            
         </shape>
     </item>
     <item>
         <shape>
+            <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
             <gradient
-                android:startColor="#646484"
-                android:endColor="#171757"
+                android:startColor="#947474"
+                android:endColor="#772727"
                 android:angle="315" />
             <stroke
                 android:width="1dp"
-                android:color="#ff7799dd" />
+                android:color="#471818" />
             <corners
-                android:radius="5dp" />
+                android:radius="200dp" />
             
         </shape>
     </item>
-</selector>
+    </selector>
+<!-- </layer-list> -->
