--- a/android_search/res/drawable/custom_button_bad.xml
+++ b/android_search/res/drawable/custom_button_bad.xml
@@ -3,15 +3,16 @@
    <item>
         <shape>
             <gradient
-                android:startColor="#d48484"
-                android:endColor="#a74747"
+                android:startColor="#8484d4"
+                android:endColor="#4747a7"
                 android:angle="315" />
             <stroke
                 android:width="2dp"
-                android:color="#ff9955" />
+                android:color="#5599ff" />
             <corners
-                android:radius="5dp" />
+                android:radius="200dp" />
             
         </shape>
     </item>
+    
 </selector>
