--- a/android_search/res/drawable/chat_background.xml
+++ b/android_search/res/drawable/chat_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">  
     <gradient
-        android:endColor="#533333"        
-        android:startColor="#545464"
-        android:angle="45"/>    
+        android:endColor="#f3e3e3"        
+        android:startColor="#e4e4f4"
+        android:angle="135"/>    
            
 </shape>
