--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -12,7 +12,8 @@
           android:layout_marginTop="2dip"
           android:background="@drawable/bubble2_blue"
           android:animateLayoutChanges="true"
-          android:orientation="horizontal" >
+          android:orientation="horizontal"
+          android:elevation="3dp" >
 
 	      <TextView
 	            android:id="@+id/label"
