--- a/android_search/res/layout/activity_image_gallery.xml
+++ b/android_search/res/layout/activity_image_gallery.xml
@@ -11,7 +11,7 @@
          TextureView, etc.
     -->
 
-    <android.view.ViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/fullscreen_content"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
