--- a/android_search/res/drawable/custom_button.xml
+++ b/android_search/res/drawable/custom_button.xml
@@ -35,12 +35,12 @@
         <shape>
             <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
             <gradient
-                android:startColor="#947474"
-                android:endColor="#772727"
+                android:startColor="#d48484"
+                android:endColor="#a74747"
                 android:angle="315" />
             <stroke
                 android:width="1dp"
-                android:color="#471818" />
+                android:color="#672828" />
             <corners
                 android:radius="200dp" />
             
