--- a/android_search/res/layout/new_main.xml
+++ b/android_search/res/layout/new_main.xml
@@ -38,7 +38,7 @@
 <!--         /> -->
     
 
-    <android.support.v4.view.ViewPager
+    <android.support.modified.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="fill_parent"
         android:layout_below="@id/indicator"
@@ -87,7 +87,7 @@
     <RelativeLayout
         android:id="@id/bottom_bar"
         android:layout_width="fill_parent"
-        android:layout_height="110dp"
+        android:layout_height="95dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
          >
