--- a/android_search/res/values-v21/styles.xml
+++ b/android_search/res/values-v21/styles.xml
@@ -12,10 +12,14 @@
     <style name="FullscreenActionBarStyle" parent="@android:style/Theme.Material">
         <item name="android:background">@color/black_overlay</item>
     </style>
-        
-        
-    <style name="StyledIndicators" parent="@android:style/Theme.Material">
-        <item name="android:windowBackground">@drawable/splash_screen</item>
-    </style>
 
+
+    <style name="AppTheme" parent="AppTheme.Base">
+	    <item name="android:windowContentTransitions">true</item>
+	    <item name="android:windowAllowEnterTransitionOverlap">true</item>
+	    <item name="android:windowAllowReturnTransitionOverlap">true</item>
+	    <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
+	    <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
+	</style>
+    
 </resources>
