--- a/android_search/res/values/colors.xml
+++ b/android_search/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="colorPrimary">#ffdd4444</color>
+    
     <color name="picker_text_color">#ff101010</color>
     <color name="toolbar_logo_divider">#ff576eb1</color>
     <color name="actionbar_background_border_top">#ff72727a</color>
