--- a/android_search/res/values/styles.xml
+++ b/android_search/res/values/styles.xml
@@ -278,8 +278,27 @@
 
     <style name="ButtonBarButton" />
 
-    <style name="StyledIndicators"   parent="@android:style/Theme.Holo.Light.DarkActionBar">
-        <item name="android:windowBackground">@drawable/splash_screen</item>
+    <style name="AppTheme" parent="AppTheme.Base"></style>
+    
+    
+    <style name="AppTheme.Base"   parent="Theme.AppCompat">
+  	    <item name="android:windowBackground">@drawable/splash_screen</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        
+        
+        <!-- colorPrimary is used for the default action bar background -->
+<!--     <item name="colorPrimary">@color/my_awesome_color</item> -->
+
+<!--     colorPrimaryDark is used for the status bar -->
+<!--     <item name="colorPrimaryDark">@color/my_awesome_darker_color</item> -->
+
+<!--     colorAccent is used as the default value for colorControlActivated -->
+<!--          which is used to tint widgets -->
+<!--     <item name="colorAccent">@color/accent</item> -->
+        
 <!--         <item name="vpiCirclePageIndicatorStyle">@style/CustomCirclePageIndicator</item> -->
 <!--         <item name="vpiLinePageIndicatorStyle">@style/CustomLinePageIndicator</item> -->
 <!--         <item name="vpiTitlePageIndicatorStyle">@style/CustomTitlePageIndicator</item> -->
