--- a/android_search/res/layout/activity_main_twopane.xml
+++ b/android_search/res/layout/activity_main_twopane.xml
@@ -1,4 +1,18 @@
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:orientation="vertical"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
 
+    
+    <android.support.v7.widget.Toolbar
+	    android:id="@+id/toolbar"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:minHeight="?attr/actionBarSize"
+	    android:background="?attr/colorPrimaryDark"
+	    />
+    
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,58 +22,55 @@
     >
 <!--     android:fitsSystemWindows="true" -->
 
+
 <RelativeLayout 
-    
     android:id="@+id/the_main_layout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:background="@drawable/chat_background"
     android:layout_height="fill_parent">
-
-   
-<!--     <com.viewpagerindicator.TabPageIndicator -->
-<!--         android:id="@+id/indicator" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:layout_width="fill_parent" -->
-<!--         /> -->
     
-<!--     <com.viewpagerindicator.TitlePageIndicator -->
-<!--         android:id="@+id/indicator" -->
-<!--         android:padding="10dip" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:layout_width="fill_parent" -->
-<!--         android:background="#ff3b3b3b" -->
-<!--         android:textColor="#AA88aaee" -->
-<!--         app:footerColor="#ff88aaee" -->
-<!--         app:footerLineHeight="2dp" -->
-<!--         app:footerIndicatorHeight="3dp" -->
-<!--         app:footerIndicatorStyle="underline" -->
-<!--         app:selectedColor="#FF88aaee" -->
-<!--         app:selectedBold="true" -->
-<!--         /> -->
-    
-    
-    <android.support.v7.widget.Toolbar
-	    android:id="@+id/toolbar"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:minHeight="?attr/actionBarSize"
-	    android:layout_alignParentTop="true"
-	    android:background="?attr/colorPrimaryDark"
-	    />
+<LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:baselineAligned="false"
+    android:divider="?android:attr/dividerHorizontal"
+    android:orientation="horizontal"
+    android:showDividers="middle" >
 
-    <android.support.modified.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="fill_parent"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/chat_background"
-        android:layout_below="@id/toolbar"
-        android:layout_height="fill_parent" >
-<!--         android:layout_above="@+id/bottom_bar" -->
+    <!--
+    This layout is a two-pane layout for the Hotels
+    master/detail flow. See res/values-large/refs.xml and
+    res/values-sw600dp/refs.xml for an example of layout aliases
+    that replace the single-pane version of the layout with
+    this two-pane version.
 
-</android.support.modified.v4.view.ViewPager>
+    For more on layout aliases, see:
+    http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
+    -->
 
-    <LinearLayout
+<!-- 	<fragment  -->
+<!-- 	    android:id"@+id/chat_fragment" -->
+	    
+
+    <fragment
+        android:id="@+id/hotel_list"
+        android:name="com.virtual_hotel_agent.search.HotelListFragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
+    <FrameLayout
+        android:id="@+id/hotel_detail_container"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3" />
+
+</LinearLayout>
+
+  <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -89,12 +100,12 @@
     </LinearLayout>
 
     
-    <ImageView 
-        android:id="@+id/trip_advisor_promo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:contentDescription="Now with TripAdvisor Ratings"/>
+<!--     <ImageView  -->
+<!--         android:id="@+id/trip_advisor_promo" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:visibility="gone" -->
+<!--         android:contentDescription="Now with TripAdvisor Ratings"/> -->
     
     <RelativeLayout
         android:id="@id/bottom_bar"
@@ -133,27 +144,13 @@
         android:elevation="9dp"
          />
      
-     
-     
-<!--      <ImageButton -->
-<!--          android:id="@+id/restart_button" -->
-<!--          style="?android:attr/buttonStyleSmall" -->
-<!--          android:layout_width="48dp" -->
-<!--          android:layout_height="48dp" -->
-<!--          android:layout_alignParentTop="true" -->
-<!--          android:layout_alignParentRight="true" -->
-<!--          android:layout_marginTop="30dp" -->
-<!--          android:layout_marginRight="28dp" -->
-<!--          android:background="@drawable/custom_button" -->
-<!--          android:onClick="myClickHandler" -->
-<!--          android:contentDescription="Restart" -->
-<!--          android:src="@drawable/session_restart" -->
-<!--          android:padding="3dp" -->
-<!--            /> -->
-     </RelativeLayout>
+    
+     </RelativeLayout> <!-- end of bottom bar -->
 
 
-</RelativeLayout>
+</RelativeLayout> <!-- end of main layout -->
+
+
 
 <ListView android:id="@+id/left_drawer"
         android:layout_width="240dp"
@@ -169,3 +166,4 @@
     </ListView>
 
 </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
