--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -46,6 +46,7 @@
 	              android:layout_marginLeft="-2dip"
 	              android:gravity="top"
 	              android:text="Lorem ipsum bla bla"
+	              android:textColor="@android:color/primary_text_light"
 	              android:textSize="16sp" 
 	              />
 	
