--- a/android_search/res/menu/mainmenu.xml
+++ b/android_search/res/menu/mainmenu.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/restart_button"
-        android:title="New Session"
-        android:icon="@drawable/session_restart"
-        app:showAsAction="always">
-    </item>
-      
     
     <item
         android:id="@+id/audio"
         android:title="@string/audio_control"
         android:icon="@drawable/speaker_icon"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:visible="false">
     </item>
     
     
+    <item
+        android:id="@+id/restart_button"
+        android:title="@string/new_session"
+        android:icon="@drawable/session_restart"
+        app:showAsAction="always">
+    </item>
+      
 
 </menu>
